change home to index.html

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -546,9 +546,9 @@
         },
         "919c309d": {
           "id": "919c309d",
-          "path": "home.html",
-          "output": "home.html",
-          "name": "home.html",
+          "path": "index.html",
+          "output": "index.html",
+          "name": "index.html",
           "category": "JUST_WATCH",
           "customOutput": false,
           "imported": false,
