--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "grunt-contrib-imagemin": "~0.9.2",
     "imagemin-mozjpeg": "~4.0.0",
     "grunt-contrib-cssmin": "~0.10.0",
-    "grunt-svg-sprite": "~0.3.2"
+    "grunt-svg-sprite": "~0.3.2",
+    "grunt-grunticon": "~2.1.6"
   }
 }
