--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "foundation-libsass-template",
   "version": "0.0.1",
   "devDependencies": {
-    "grunt": "^1.0.1",
+    "grunt": "^1.3.0",
     "grunt-browser-sync": "~2.2.0",
     "grunt-contrib-concat": "~1.0.1",
     "grunt-contrib-cssmin": "~2.2.1",
     "grunt-contrib-imagemin": "~2.0.1",
     "grunt-contrib-uglify": "~3.1.0",
-    "grunt-contrib-watch": "~1.0.0",
+    "grunt-contrib-watch": "^1.0.1",
     "grunt-grunticon": "~2.3.2",
     "grunt-sass": "~2.0.0",
     "grunt-sitemap": "~1.2.1",
@@ -16,7 +16,7 @@
     "grunt-uncss": "~0.7.1",
     "imagemin": "^5.3.1",
     "imagemin-mozjpeg": "~6.0.0",
-    "node-sass": "~4.6.0",
+    "node-sass": "^4.6.1",
     "slick-carousel": "~1.8.1"
   }
 }
