--- a/package.json
+++ b/package.json
@@ -5,18 +5,18 @@
     "grunt": "^1.3.0",
     "grunt-browser-sync": "~2.2.0",
     "grunt-contrib-concat": "~1.0.1",
-    "grunt-contrib-cssmin": "~2.2.1",
-    "grunt-contrib-imagemin": "~2.0.1",
-    "grunt-contrib-uglify": "~3.1.0",
-    "grunt-contrib-watch": "^1.0.1",
+    "grunt-contrib-cssmin": "~3.0.0",
+    "grunt-contrib-imagemin": "~4.0.0",
+    "grunt-contrib-uglify": "~5.0.0",
+    "grunt-contrib-watch": "^1.1.0",
     "grunt-grunticon": "~2.3.2",
-    "grunt-sass": "~2.0.0",
-    "grunt-sitemap": "~1.2.1",
-    "grunt-svg-sprite": "~1.3.7",
-    "grunt-uncss": "~0.7.1",
-    "imagemin": "^5.3.1",
-    "imagemin-mozjpeg": "~6.0.0",
-    "node-sass": "^4.6.1",
+    "grunt-sass": "~3.1.0",
+    "grunt-sitemap": "~2.0.1",
+    "grunt-svg-sprite": "^1.5.0",
+    "grunt-uncss": "~0.9.1",
+    "imagemin": "^7.0.1",
+    "imagemin-mozjpeg": "~9.0.0",
+    "node-sass": "^4.14.1",
     "slick-carousel": "~1.8.1"
   }
 }
