--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "imagemin-mozjpeg": "~9.0.0",
     "node-sass": "^4.14.1",
     "slick-carousel": "~1.8.1"
+  },
+  "dependencies": {
+    "jquery-datetimepicker": "^2.5.21"
   }
 }
