--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@
 *.ai
 .bowerrc
 config.codekit3
+email_template_bozza/images/logo-completo.png
+email_template_bozza/images/logo-completo.svg
+email_template_bozza/index.html
